k8s/04-external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rds-mysql
  namespace: default
spec:
  type: ExternalName
  externalName: dev-mysql-db.cm7gkmmq8ohp.us-east-1.rds.amazonaws.com
